# ROS-ToolExtension

./: .travis.yml  README.md  config.cfg  eigenUtils.cpp
data_collector/: CMakeLists.txt  package.xml
rviz_points_to_trajectory/: CMakeLists.txt  package.xml
rviz_points_to_trajectory/src/: main.cpp
tom_joint_planner/: CMakeLists.txt  package.xml
tom_joint_planner/include/tom_joint_planner/: TomJointPlannerSimulation.h
tom_joint_planner/src/: TomJointPlannerSimulation.cpp
toolextension_lwpr/: CMakeLists.txt  package.xml
toolextension_lwpr/include/toolextension_lwpr/: node.h  toolextension_lwpr_node.h
toolextension_lwpr/lib/: CMakeLists.txt
toolextension_lwpr/lib/learner/: base_learner.cc  base_learner.h  lwpr_learner.cc  lwpr_learner.h
toolextension_lwpr/lib/lwpr/: CMakeLists.txt
toolextension_lwpr/lib/lwpr/src/: lwpr.c
toolextension_lwpr/lib/misc/: config.cpp  config.h
toolextension_lwpr/src/: node.cpp  toolextension_lwpr_node.cpp
